--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 <body>
 <div style="text-align: center">
     <div class="display">
-        <h1>Нахуя?</h1>
-        <p>А главное зачем?</p>
+        <h1><b>Нахуя?</b></h1>
+        <p><b>А главное зачем?</b></p>
     </div>
     <div style="position: absolute; bottom: 10px; left: 0px;">
         <img src="David.jpg" width = 150; height = 150; usemap="#workmap">
