--- a/index.html
+++ b/index.html
@@ -10,7 +10,45 @@
         <h1><b>Нахуя?</b></h1>
         <p><b>А главное зачем?</b></p>
     </div>
-    <div style="position: absolute; bottom: 10px; left: 0px;">
+</div>
+<div>
+    <table id="t01">
+        <caption><b>Полезные ресурсы для веб-девелопера</b></caption>
+        <tr>
+            <th>Сайт</th>
+            <th>Ссылка на сайт</th>
+            <th>В чем полезен</th>
+        </tr>
+        <tr>
+            <td>LearnJavaScript</td>
+            <td><a href ="https://learn.javascript.ru" target="_blank">https://learn.javascript.ru</a></td>
+            <td>Javascript</td>
+        </tr>
+        <tr>
+            <td>MDN</td>
+            <td><a href="https://developer.mozilla.org/ru" target="_blank">https://developer.mozilla.org/ru</a></td>
+            <td>Javascript, Html, CSS</td>
+        </tr>
+        <tr>
+            <td>W3S</td>
+            <td><a href="https://www.w3schools.com" target="_blank">https://www.w3schools.com</a></td>
+            <td>HTML, CSS</td>
+        </tr>
+    </table>
+</div>
+<div class="displayList">
+    <p class="displayList">Топ групп Давида</p>
+    <ol>
+        <li>Blackpink</li>
+        <li>Аквариум</li>
+        <li>Попкорн</li>
+        <li>Радио Тапок</li>
+        <li>SELLOUT</li>
+        <li>ЙОРШ</li>
+        <li>Тараканы!</li>
+    </ol>
+</div>
+<div style="position: absolute; bottom: 10px; left: 0px;">
         <img src="David.jpg" width = 150; height = 150; usemap="#workmap">
         <map name="workmap">
             <area shape="rect" coords="0, 0, 400, 400" onclick="myFunction()">
@@ -21,10 +59,9 @@
                 alert("старая аватарка Давида");
             }
         </script>
-    </div>
-    <div class="davidLink">
+</div>
+<div class="davidLink">
             <a href="https://vk.com/ge_tt" target="_blank" title="Давид Лукава"><b>В соавторстве с</b></a>
-    </div>
 </div>
 </body>
 </html>
