--- a/index.html
+++ b/index.html
@@ -36,17 +36,19 @@
         </tr>
     </table>
 </div>
-<div class="displayList">
-    <p class="displayList">Топ групп Давида</p>
-    <ol>
-        <li>Blackpink</li>
-        <li>Аквариум</li>
-        <li>Попкорн</li>
-        <li>Радио Тапок</li>
-        <li>SELLOUT</li>
-        <li>ЙОРШ</li>
-        <li>Тараканы!</li>
-    </ol>
+<div style="text-align: center">
+    <div class="displayList">
+        <p class="displayList">Топ групп Давида</p>
+        <ol>
+            <li>Blackpink</li>
+            <li>Аквариум</li>
+            <li>Попкорн</li>
+            <li>Радио Тапок</li>
+            <li>SELLOUT</li>
+            <li>ЙОРШ</li>
+            <li>Тараканы!</li>
+        </ol>
+    </div>
 </div>
 <div style="position: absolute; bottom: 10px; left: 0px;">
         <img src="David.jpg" width = 150; height = 150; usemap="#workmap">
