--- a/index.html
+++ b/index.html
@@ -2,17 +2,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Free Web tutorials">
+    <meta name="keywords" content="HTML, CSS, JavaScript">
     <title>говносайт</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-<div style="text-align: center">
-    <div class="display">
-        <h1><b>Нахуя?</b></h1>
-        <p><b>А главное зачем?</b></p>
-    </div>
-</div>
-<div>
+    <ul class="NavigationMenu">
+        <li class="ListNavigation"><a class="NavigationButton" href="index.html">Home</a></li>
+        <li class="ListNavigation"><a class="NavigationButton" href="#news">News</a></li>
+        <li class="ListNavigation"><a class="NavigationButton" href="Contact.html">Contact</a></li>
+        <li class="ListNavigation"><a class="NavigationButton" href="About.html">About</a></li>
+        <li class="ListNavigation"><a class="NavigationButton" href="forms.html">Чипизация</a></li>
+    </ul>
     <table id="t01">
         <caption><b>Полезные ресурсы для веб-девелопера</b></caption>
         <tr>
@@ -22,21 +24,20 @@
         </tr>
         <tr>
             <td>LearnJavaScript</td>
-            <td><a href ="https://learn.javascript.ru" target="_blank">https://learn.javascript.ru</a></td>
+            <td><a class="davidLink" href ="https://learn.javascript.ru" target="_blank">https://learn.javascript.ru</a></td>
             <td>Javascript</td>
         </tr>
         <tr>
             <td>MDN</td>
-            <td><a href="https://developer.mozilla.org/ru" target="_blank">https://developer.mozilla.org/ru</a></td>
+            <td><a class="davidLink" href="https://developer.mozilla.org/ru" target="_blank">https://developer.mozilla.org/ru</a></td>
             <td>Javascript, Html, CSS</td>
         </tr>
         <tr>
             <td>W3S</td>
-            <td><a href="https://www.w3schools.com" target="_blank">https://www.w3schools.com</a></td>
+            <td><a class="davidLink" href="https://www.w3schools.com" target="_blank">https://www.w3schools.com</a></td>
             <td>HTML, CSS</td>
         </tr>
     </table>
-</div>
 <div style="text-align: center">
     <div class="displayList">
         <p class="displayList">Топ групп Давида</p>
@@ -51,20 +52,19 @@
         </ol>
     </div>
 </div>
-<div style="position: absolute; bottom: 10px; left: 0px;">
+<div style="position: fixed; bottom: 10px; left: 0px;">
         <img src="David.jpg" width = 150; height = 150; usemap="#workmap">
         <map name="workmap">
             <area shape="rect" coords="0, 0, 400, 400" onclick="myFunction()">
         </map>
-
         <script>
             function myFunction() {
                 alert("старая аватарка Давида");
             }
         </script>
 </div>
-<div class="davidLink">
-            <a href="https://vk.com/ge_tt" target="_blank" title="Давид Лукава"><b>В соавторстве с</b></a>
+<div class="davidLinkDisplay">
+    <a class="davidLink" href="https://vk.com/ge_tt" target="_blank" title="Давид Лукава"><b>В соавторстве с</b></a>
 </div>
 </body>
 </html>
