--- a/forms.html
+++ b/forms.html
@@ -33,7 +33,7 @@
             <label for="sex-3">Другое</label><br><br>
         </div>
         <label for="smthng">Опишите себя:</label><br>
-        <textarea id="smthng" name="message" rows="5" cols="70" placeholder="напишите что-нибудь..."></textarea><br><br>
+        <textarea id="smthng" name="message" placeholder="напишите что-нибудь..."></textarea><br><br>
         <label for="browsers">Выберите браузер через который вы сейчас сидите:</label><br>
         <select id="browsers" name="browsers">
             <option value="volvo">Internet Explorer</option>
