--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <li class="ListNavigation"><a class="NavigationButton" href="About.html">About</a></li>
         <li class="ListNavigation"><a class="NavigationButton" href="forms.html">Чипизация</a></li>
     </ul>
+    <div style="overflow-x:auto;">
     <table id="t01">
         <caption><b>Полезные ресурсы для веб-девелопера</b></caption>
         <tr>
@@ -38,6 +39,7 @@
             <td>HTML, CSS</td>
         </tr>
     </table>
+    </div>
 <div style="text-align: center">
     <div class="displayList">
         <p class="displayList">Топ групп Давида</p>
