--- a/forms.html
+++ b/forms.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <script type="module" src="scrollProgressBar.js"></script>
     <script type="module" src="formsValidtion.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Free Web tutorials">
@@ -17,6 +18,7 @@
         <li class="ListNavigation"><a class="NavigationButton" href="About.html">About</a></li>
         <li class="ListNavigation"><a class="NavigationButton" href="forms.html">Чипизация</a></li>
     </ul>
+    <progress id="progressbar" class="progressbar" value="0" max="100"></progress>
 <div>
     <form method="post" autocomplete="on">
         <label for="fname">First name:</label><br>
