--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script type="module" src="scrollProgressBar.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=yes, minimum-scale=1.0">
     <meta name="description" content="Free Web tutorials">
     <meta name="keywords" content="HTML, CSS, JavaScript">
+    <meta name="google" content="notranslate">
     <title>говносайт</title>
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -14,7 +16,19 @@
         <li class="ListNavigation"><a class="NavigationButton" href="Contact.html">Contact</a></li>
         <li class="ListNavigation"><a class="NavigationButton" href="About.html">About</a></li>
         <li class="ListNavigation"><a class="NavigationButton" href="forms.html">Чипизация</a></li>
+        <li class="dropdown">
+            <a href="javascript:void(0)" class="dropbtn">Dropdown</a>
+            <div class="dropdown-content">
+                <a href="#">Link 1</a>
+                <a href="#">Link 2</a>
+                <a href="#">Link 3</a>
+            </div>
+        </li>
+        <form class="custom-site-search">
+            <input type="text" name="search" placeholder="Search..">
+        </form>
     </ul>
+    <progress id="progressbar" class="progressbar" value="0" max="100"></progress>
     <div style="overflow-x:auto;">
     <table id="t01">
         <caption><b>Полезные ресурсы для веб-девелопера</b></caption>
@@ -54,7 +68,7 @@
         </ol>
     </div>
 </div>
-<div style="position: fixed; bottom: 10px; left: 0px;">
+<div class="opacity" style="position: fixed; bottom: 10px; left: 0px;">
         <img src="David.jpg" width = 150; height = 150; usemap="#workmap">
         <map name="workmap">
             <area shape="rect" coords="0, 0, 400, 400" onclick="myFunction()">
@@ -68,5 +82,96 @@
 <div class="davidLinkDisplay">
     <a class="davidLink" href="https://vk.com/ge_tt" target="_blank" title="Давид Лукава"><b>В соавторстве с</b></a>
 </div>
+    <div id="calendar"></div>
+    <script>
+        function createCalendar(elem, year, month) {
+
+            let mon = month - 1; // месяцы в JS идут от 0 до 11, а не от 1 до 12
+            let d = new Date(year, mon);
+
+            let table = '<table><tr><th>пн</th><th>вт</th><th>ср</th><th>чт</th><th>пт</th><th>сб</th><th>вс</th></tr><tr>';
+
+            // пробелы для первого ряда
+            // с понедельника до первого дня месяца
+            // * * * 1  2  3  4
+            for (let i = 0; i < getDay(d); i++) {
+                table += '<td></td>';
+            }
+
+            // <td> ячейки календаря с датами
+            while (d.getMonth() == mon) {
+                table += '<td>' + d.getDate() + '</td>';
+
+                if (getDay(d) % 7 == 6) { // вс, последний день - перевод строки
+                    table += '</tr><tr>';
+                }
+
+                d.setDate(d.getDate() + 1);
+            }
+
+            // добить таблицу пустыми ячейками, если нужно
+            // 29 30 31 * * * *
+            if (getDay(d) != 0) {
+                for (let i = getDay(d); i < 7; i++) {
+                    table += '<td></td>';
+                }
+            }
+
+            // закрыть таблицу
+            table += '</tr></table>';
+
+            elem.innerHTML = table;
+        }
+
+        function getDay(date) { // получить номер дня недели, от 0 (пн) до 6 (вс)
+            let day = date.getDay();
+            if (day == 0) day = 7; // сделать воскресенье (0) последним днем
+            return day - 1;
+        }
+
+        createCalendar(calendar, 2020, 9);
+    </script>
+    <div style="text-align: center">
+        <div class="displayList">
+            <p class="displayList">Топ групп Давида</p>
+            <ol>
+                <li>Blackpink</li>
+                <li>Аквариум</li>
+                <li>Попкорн</li>
+                <li>Радио Тапок</li>
+                <li>SELLOUT</li>
+                <li>ЙОРШ</li>
+                <li>Тараканы!</li>
+            </ol>
+        </div>
+    </div>
+    <div style="text-align: center">
+        <div class="displayList">
+            <p class="displayList">Топ групп Давида</p>
+            <ol>
+                <li>Blackpink</li>
+                <li>Аквариум</li>
+                <li>Попкорн</li>
+                <li>Радио Тапок</li>
+                <li>SELLOUT</li>
+                <li>ЙОРШ</li>
+                <li>Тараканы!</li>
+            </ol>
+        </div>
+    </div>
+    <div style="text-align: center">
+        <div class="displayList">
+            <p class="displayList">Топ групп Давида</p>
+            <ol>
+                <li>Blackpink</li>
+                <li>Аквариум</li>
+                <li>Попкорн</li>
+                <li>Радио Тапок</li>
+                <li>SELLOUT</li>
+                <li>ЙОРШ</li>
+                <li>Тараканы!</li>
+            </ol>
+        </div>
+    </div>
 </body>
 </html>
